--- a/style/style.css
+++ b/style/style.css
@@ -2,13 +2,12 @@
 body{
     display: flex;
     height: 100vh;
+    font-size: 10px;
     align-items: center;
     background: linear-gradient(135deg, #d6d2d3, #c0babb);
 }
 .containe{
-    margin: 40px;
-    max-width: 350px;
-    width: 100%;
+    margin-top: 5px;
     background: #fff;
     border-radius: 5px;
 }
@@ -16,10 +15,9 @@ body{
     font-size: 25px;
     font-weight: 500;
 }
-.containe .title::before{
+.containe .title::after{
     content: '';
-    z-index: -1;
-    left: 0;
+    display: block;
     bottom: 0;
     height: 3px;
     width: 30px;
@@ -100,4 +98,53 @@ form .button input{
 }
 form .button input:hover{
     background: linear-gradient(-135deg, #ce0033, #ee7795);
+}
+.profil-nom{
+    font-size: 2rem;
+    line-height: 1;
+    letter-spacing: 1px;
+
+}
+.profil-nom::after{
+    content: "";
+    display: block;
+    height: 1px;
+    width: 2rem;
+    background-color: #ce0033;
+    margin: 0.7em auto 0.5em;
+}
+.carte{
+    line-height: 1;
+    display: grid;
+    place-items: center;
+}
+.card{
+    box-shadow: 0 0 20px rgb(0, 0, 0.2);
+    width: 80%;
+    flex-direction: column;
+    background-color: rgb(255, 255, 255);
+    color: black;
+    text-align: center;
+    padding: 2em;
+    height: 40%;
+}
+.profil img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.profil-position{
+    margin: 0;
+    letter-spacing: 3px;
+    color: #ce0033;
+    opacity: 0.35;
+    margin-bottom: 2em;
+}
+.profil-body{
+    font-weight: 300;
+    opacity: 0.7;
+    margin-bottom: 0;
+}
+.profil-main h6{
+    font-size: 15px;
 }
