--- a/style/style.css
+++ b/style/style.css
@@ -1,15 +1,15 @@
 
 body{
-    display: flex;
     height: 100vh;
     font-size: 10px;
     align-items: center;
-    background: linear-gradient(135deg, #d6d2d3, #c0babb);
+      background: linear-gradient(135deg, #e9c4cd, #dbd8d9);
 }
 .containe{
     margin-top: 5px;
     background: #fff;
     border-radius: 5px;
+    box-shadow: 0 0 20px rgb(0, 0, 0.2);
 }
 .containe .title{
     font-size: 25px;
@@ -21,9 +21,30 @@ body{
     bottom: 0;
     height: 3px;
     width: 30px;
-   background: linear-gradient(135deg, #ce0033, #ee7795);
+    background: linear-gradient(135deg, #ce0033, #ee7795);
 }
-.containe form .user-details{
+.btn-ajout{
+    height: 70%;
+    width: 30%;
+     color: #FFF;
+     justify-content: center;
+     font-size: 10px;
+     font-weight: 500;
+     border-radius: 5px;
+     background: linear-gradient(135deg, #ce0033, #ee7795);
+}
+.btn-edit{
+     height: 70%;
+     width: 30%;
+     color: #FFF;
+     justify-content: center;
+     margin-left: 70px;
+     font-size: 10px;
+     font-weight: 500;
+     border-radius: 5px;
+     background: linear-gradient(135deg, #ce0033, #ee7795);
+}
+/* .containe form .user-details{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -55,6 +76,9 @@ form select  option{
 }
 .user-details .input-box input:focus,
 .user-details .input-box input:valid{
+    border-color: green;
+}
+.user-details .input-box input:invalid{
     border-color: #ce0033;
 }
 form .niveau-details .niveau-title{
@@ -80,18 +104,26 @@ form .niveau-details .category{
     border: 5px solid transparent;
     transition: all 0.3 ease;
 }
-
 form .button{
     height: 45px;
     width: 45px 0;
 }
-form .button input{
-    height: 80%;
-    width: 100%;
-    outline: none;
+.btn-ajout{
+    height: 70%;
+    width: 30%;
      color: #FFF;
-     border: none;
-     font-size: 18px;
+     justify-content: center;
+     font-size: 10px;
+     font-weight: 500;
+     border-radius: 5px;
+     background: linear-gradient(135deg, #ce0033, #ee7795);
+}
+.btn-edit{
+     height: 70%;
+     width: 30%;
+     color: #FFF;
+     justify-content: center;
+     font-size: 10px;
      font-weight: 500;
      border-radius: 5px;
      background: linear-gradient(135deg, #ce0033, #ee7795);
@@ -111,6 +143,17 @@ form .button input:hover{
     width: 2rem;
     background-color: #ce0033;
     margin: 0.7em auto 0.5em;
+} */
+form .form-group input{
+    font-size: 10px;
+}
+.form-group input:focus,
+.form-group input:invalid{
+    border-color: #ce0033;
+}
+.form-group textarea:focus,
+.form-group textarea:invalid{
+    border-color: #ce0033;
 }
 .carte{
     line-height: 1;
